			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.04b: *********************************

BUG: (10/26/05, SMR) Auto-stitcher connects annotation text objects (Bug #695).
FIX: Disallow Generic technology nodes in auto-stitching.

IMP: (10/26/05, SMR) Spice output sorts subcircuit signal names (Bug #694).

IMP: (10/26/05, SMR) Auto-stitching avoids adding duplicate arcs.

IMP: (10/26/05, SMR) "Find Text" dialog now has "alt" keys on its buttons (Bug #671).

IMP: (10/25/05, SMR) Waveform window signal order saved in preferences, not cells.

BUG: (10/25/05, SMR) Double-clicking text does not edit it in-place.

BUG: (10/25/05, GVG) rename dialog resets to current cell every time you hit (bug #692)
FIX: lastSelectedCell in rename job didn't include view abbreviation.

BUG: (10/25/05, SMR) Double-clicking text does not edit it in-place (Bug #693).
FIX: In EditMenu.getInfoCommand(), do not ignore text that is not special.
     In SpecialProperties.java, rehighlight the text after the "more" button is clicked.

BUG: (10/25/05, DN) PortCharacteristic of Exports is not undoable.
FIX: Side effect of implementing ImmutableExport for transactional DB.

BUG: (10/24/05, SMR) Nonmanhattan arcs may be produced when they are long.
FIX: In SimpleWirer.planRoute() make special case for manhattan routes.

IMP: (10/24/05, SMR) Many changes to use generics.

IMP: (10/23/05, SMR) Greeked cell cache is cleared when layer visibility changes.
     Vector display cache is cleard when technology preferences change.

BUG: (10/23/05, SMR) Export changes are allowed even when nodes or cells are locked.
FIX: Added checking code to CircuitChanges.DeleteSelected.doIt(), NewExport.MakeExport.doIt(),
     and ExportChanges.DeleteExports.doIt().

BUG: (10/23/05, SMR) Waveform window grid has bad horizontal lines.
FIX: Grid lines are now aligned with tick marks.
